# TDA_ADNI_MLCB

./: .env  .gitignore  LICENSE  README.md  README.org  environment.yml  goals.org  meetings.org  pyproject.toml  pyrightconfig.json  requirements.txt
exploring/: Clustering_of_topological_features.ipynb  applying_filtration_to_patches.org  clustering_plotting.ipynb  distance_between_PIs.py  early_findings.org  exploring_influence_of_atlas.org  exploring_influence_of_delineation_temporal_region_on_topological_descriptors.org  exploring_outliers_and_misclassified_patients.org  full_trajectory_exploration.org  multilayer_pl.org  persistent_homology_on_patch.org  persistent_homology_on_patch.py  persistent_homology_on_patches.org  topological_evolution_of_patient.org  using_other_representations_for_classifications.org  utils.py
literature/: ressources.org
presentation/: README.org  References.bib  lab_update.tex  main.tex
report/: main.bib  neurips_2020.sty  neurips_2020.tex  report_lab_rotation.tex
scripts/: CNN_using_persistence_images_on_patch.py  RF_using_persistence_images_on_patch.py  clustering_plotting.py  compare_distribution_misclassified_vs_dist_normally_classified.py  compare_topological_outliers_and_misclassified_samples.py  distance_between_PIs.py  distance_between_average_pds.py  distance_between_median_pi.py  distance_between_pds.py  distance_clustering.py  heat_kernel_generator.py  mapper_for_patch.ipynb  mapper_patches.py  patient_evolution.py  persistence_image_generator.py  persistence_landscape_generator.py  plotting.py  plotting_utils.py  (+2 more)
(+24 files in other folders)
