[tool.poetry]
name = "tda_adni_mlcb"
version = "0.1.0"
description = ""
authors = ["Philip Hartout <philip.hartout@protonmail.com>"]
license = "BSD 3"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
giotto-tda = "^0.3.1"
python-dotenv = "^0.15.0"
tensorflow = "^2.4.0"
pandas = "^1.2.0"
scikit-learn = "^0.24.0"
pydot = "^1.4.1"
tqdm = "^4.55.1"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
